# x_1000

./: LICENSE  README.md  blade_runner.py  consider.txt  pyproject.toml  setup.py
notebooks/: Ex.ipynb  Scratch.ipynb  Untitled.ipynb
x_1000/: outer_models.py  outer_rim.py  skeleton.py
